tests/rosetta/out/Rust/blum-integer.error
rustc error: exit status 1
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:65:30
   |
65 |         while s.len() as i32 < width {
   |                              ^ ------- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
65 |         while (s.len() as i32) < width {
   |               +              +

warning: denote infinite loops with `loop { ... }`
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:88:9
   |
88 |         while true {
   |         ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:56:35
   |
56 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                   ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:56:31
   |
56 |             if &s[i as usize..i + 1 as usize] == ch {
   |                               ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:56:33
   |
56 |             if &s[i as usize..i + 1 as usize] == ch {
   |                                 ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:68:16
   |
63 |     fn padLeft(n: i32, width: i32) -> &'static str {
   |                                       ------------ expected `&'static str` because of return type
...
68 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
68 |         return &s;
   |                +

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:72:27
   |
72 |         let idx = indexOf(s, ".");
   |                   ------- ^ expected `&str`, found `String`
   |                   |
   |                   arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:53:8
   |
53 |     fn indexOf(s: &'static str, ch: &'static str) -> i32 {
   |        ^^^^^^^ ---------------
help: consider borrowing here
   |
72 |         let idx = indexOf(&s, ".");
   |                           +

error[E0308]: mismatched types
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:74:20
   |
70 |     fn formatFloat(f: f64, prec: i32) -> &'static str {
   |                                          ------------ expected `&'static str` because of return type
...
74 |             return s;
   |                    ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
74 |             return &s;
   |                    +

error[E0599]: no method named `parse` found for type `f64` in the current scope
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:91:51
   |
91 |                 let q = ((i as f64) / (p as f64)).parse::<i32>().unwrap();
   |                                                   ^^^^^ method not found in `f64`

error[E0308]: mismatched types
   --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:108:40
    |
108 | ...                   line = format!("{}{}", format!("{}{}", line, padLeft(blum[idx as usize], 3)), " ");
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
    |
    = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:112:82
    |
112 | ...                   println!("{}", &line[0 as usize..line.len() as i32 - 1 as usize]);
    |                                                                            ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
   --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:112:62
    |
112 | ...                   println!("{}", &line[0 as usize..line.len() as i32 - 1 as usize]);
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot subtract `usize` from `i32`
   --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:112:80
    |
112 | ...                   println!("{}", &line[0 as usize..line.len() as i32 - 1 as usize]);
    |                                                                          ^ no implementation for `i32 - usize`
    |
    = help: the trait `Sub<usize>` is not implemented for `i32`
    = help: the following other types implement trait `Sub<Rhs>`:
              `&i32` implements `Sub<i32>`
              `&i32` implements `Sub`
              `i32` implements `Sub<&i32>`
              `i32` implements `Sub`

warning: variable does not need to be mutable
  --> /tmp/TestMochiToRustblum-integer2126564845/001/prog.rs:41:13
   |
41 |         let mut inc = vec![4, 2, 4, 2, 4, 6, 2, 6];
   |             ----^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error: aborting due to 12 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
